test/semantic-errors/12.pas
program p;
begin writeln(2+2.0)end.
